--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS Link -->
-    <link rel="stylesheet" href="dist/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
 
     <!-- Theme CSS Link -->
-    <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="stylesheet" href="main.css">
 
     <title>Shop By Ankit</title>
 </head>
 
 <body>
-    <section class="main" style="background-image: url(dist/src/images/bg.jpg);">
+    <section class="main" style="background-image: url(bg.jpg);">
         <!-- Header Starts Here -->
         <header class="container">
             <nav>
@@ -90,7 +90,7 @@
 
         <!-- Only Mobile View Starts Here -->
         <section class="xs-bg d-md-none d-lg-none">
-            <img src="dist/src/images/xs.jpg" alt="img" class="img-fluid w-100">
+            <img src="xs.jpg" alt="img" class="img-fluid w-100">
         </section>
         <!-- Only Mobile View Ends Here -->
     </section>
